2005-07-27 David Reveman <davidr@novell.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_screen_from_visual): Trivial
	fix for typo that caused infinite loop when using non-default visuals.

2005-07-25  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-font.c:
	* src/cairo-ft-font.c:
	* src/cairo-glitz-surface.c:
	* src/cairo-pdf-surface.c: Replace all occurences of refcount with
	ref_count.

	* doc/public/language-bindings.xml: Replace refcounted with
	reference-counted.

2005-07-25  Owen Taylor  <otaylor@redhat.com>

	reviewed by: cworth

	* src/cairo.[ch] src/cairo-gstate-private.h src/cairo-gstate.c
	src/cairoint.c: Add cairo_{get,set}_font_options().

	* doc/public/Makefile.am (IGNORE_HFILES): Add cairo-xlib-private.h

	* doc/public/cairo-sections.txt: Update

2005-07-24  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c (_render_glyph_outline): Fix size of allocated buffer
	for vertical subpixel rendering. (Reported by Fryderyk Dziarmagowski,
	http://bugzilla.gnome.org/show_bug.cgi?id=310935)
	(_get_pattern_load_flags): Fix a problem where we were OR'ing multiple
	FT_LOAD_* flags together.

	* src/cairo-xlib-screen.c (_cairo_xlib_init_screen_font_options): Fix 
	reversed check for subpixel or not.

2005-07-23  Malcolm Tredinnick  <malcolm@commsecure.com.au>

	* src/cairo-ft-font.c:
	* src/cairo.h: Add some missing parameters for API docs.

2005-07-23  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-private.h src/cairo-xlib-screen.c: Switch to using
	Screen * not screen number to match surface code.

	* src/cairo-xlib-screen.c: Get the screen info for the right screen
	for the surface.
	
2005-07-22  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c: Protect against division by zero in various places.
	(http://bugzilla.gnome.org/show_bug.cgi?id=311299, reported by Ali Akcaagac)
	
2005-07-22  Owen Taylor  <otaylor@redhat.com>

	Patch from Tor Lillqvist  <tml@novell.com>
