@@ -1,3 +1,9 @@
+2005-07-27  Owen Taylor  <otaylor@redhat.com>
+
+	* src/cairo-ft-font.c (_get_bitmap_surface): FreeType bitmaps may
+	only be padded out to 8-bit boundaries, not 32-bit boundaries.
+	(_render_glyph_bitmap): Fix sign error in using glyphslot->bitmap_left.
+
 2005-07-27 David Reveman <davidr@novell.com>
 
 	* src/cairo-xlib-surface.c (_cairo_xlib_screen_from_visual): Trivial
